[project]
name = "supcon-adventurex-factory-sim"
version = "1.0.0"
description = "Backend simulation environment for the SUPCON Hackathon"
authors = [{ name = "SUPCON R&D Team" }]
dependencies = [
    "simpy",
    "paho-mqtt",
    "pydantic",
    "pyyaml",
    "numpy",
    "psutil",
    "python-dotenv>=1.1.1",
    "openai-agents>=0.2.3",
    "mypy>=1.17.0",
]
requires-python = ">=3.9"

# Add package configuration for proper import resolution
[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
dev-dependencies = [
    "pytest",
    "ruff>=0.12.4",
]

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__"]
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
select = ["E", "F", "W", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
